# boost-geometry-proposal

./: README.md
geolib/: .gitignore  CMakeLists.txt  Doxyfile
geolib/src/: geodistance.cpp  geodistance.hpp  geographiclib-bitmask.hpp  geographiclib-geodesic.hpp  geopoint.cpp  geopoint.hpp
geolib/tests/: a.out  geodistance_test  geodistance_test.cpp  geographiclib_geodistance_test.cpp
